k8s/example-hpa/example-hpa-Ingress.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: example-hpa-ingress
  namespace: moonitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - hpa.oktanium.im
  rules:
  - host: hpa.oktanium.im
    http:
      paths:
      - path: /
        backend:
          serviceName: example-hpa
          servicePort: 5000
